--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,6 @@
 		</repository>
 	</repositories>
 	<dependencies>
-
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-server</artifactId>
@@ -30,7 +29,7 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<finalName>restTest</finalName>
+		<finalName>frontend</finalName>
 		<plugins>
 			<!-- Maven Tomcat Plugin -->
 			<plugin>
@@ -39,7 +38,7 @@
 				<configuration>
 					<url>http://marrrschine.de:8080/manager/text</url>
 					<server>tomcat</server>
-					<path>/webapp</path>
+					<path>/*</path>
 				</configuration>
 			</plugin>
 			<!-- Maven compiler plugin -->
