--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.7.3</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>frontend</finalName>
