--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
 	</repositories>
 	<dependencies>
 		<dependency>
+			<groupId>org.mongodb.morphia</groupId>
+			<artifactId>morphia</artifactId>
+			<version>0.107</version>
+		</dependency>
+		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-server</artifactId>
 			<version>1.8</version>
